firefox-3.7 (3.7~a1~hg20091008r33669+nobinonly-0ubuntu1) UNRELEASED; urgency=low

  [ Fabien Tassin <fta@ubuntu.com> ]
  * Mass update from 3.6 to 3.7
  * Drop libnkgnomevfs.so from firefox-3.7-gnome-support, it's already
    shippped in xulrunner-1.9.3-gnome-support (see bmo #512671)
    - update debian/firefox-3.7-gnome-support.install

 -- Micah Gersten <launchpad@micahscomputing.com>  Thu, 08 Oct 2009 23:33:42 -0500

firefox-3.6 (3.6~a2~hg20090810r31291+nobinonly-0ubuntu1) UNRELEASED; urgency=low

  [ H. Montoliu <hmontoliu@ubuntu.com> ]
  * fix LP: #361052 - firefox apport hook fails to retrieve pluginreg.dat file
  * update debian/apport/firefox-3.6.py - removed unused code and minor refactoring.

  [ Fabien Tassin <fta@ubuntu.com> ]
  * Mass update from 3.1 to 3.6:
    * Renamed and updated
      - debian/abrowser-3.1.desktop => debian/abrowser-3.6.desktop
      - debian/apport/firefox-3.1.py => debian/apport/firefox-3.6.py
      - debian/firefox-3.1-final.desktop => debian/firefox-3.6-final.desktop
      - debian/firefox-3.1-gnome-support.postinst.in => debian/firefox-3.6-gnome-support.postinst.in
      - debian/firefox-3.1-minefield.desktop => debian/firefox-3.6-minefield.desktop
      - debian/firefox-3.1-restart-required.update-notifier => debian/firefox-3.6-restart-required.update-notifier
      - debian/firefox-3.1-shiretoko.desktop => debian/firefox-3.6-shiretoko.desktop
      - debian/firefox-3.1.install => debian/firefox-3.6.install
      - debian/firefox-3.1.links => debian/firefox-3.6.links
      - debian/firefox-3.1.menu => debian/firefox-3.6.menu
      - debian/mozclient/firefox-3.1.conf => debian/mozclient/firefox-3.6.conf
      - debian/mozclient/firefox-3.1.mk => debian/mozclient/firefox-3.6.mk
      - debian/firefox-3.1-dev.install => debian/firefox-3.6-dev.install
      - debian/firefox-3.1-dev.links => debian/firefox-3.6-dev.links
      - debian/firefox-3.1-gnome-support.install => debian/firefox-3.6-gnome-support.install