@@ -22,7 +22,7 @@ MOZCLIENT_VCS_LOC    = http://hg.mozilla.org/
 MOZCLIENT_FILE       = mozilla/browser/config/version.txt
 MOZCLIENT_GETVERSION = sed -e 's/pre//; s/\([ab]\)\([0-9]*\)/~\1\2/' mozilla/browser/config/version.txt
 #MOZCLIENT_POSTCOCMD  = cd mozilla && python client.py checkout
-MOZCLIENT_GETDATE    = a=`wget -qO- http://hg.mozilla.org/mozilla-central/pushlog | sed -e '/<\/entry>/,$d' | grep -E '^  <(link|updated)' | tr -d '\n' | tr '<>' '"' | cut -d'"' -f3,7`; (echo -n $a | cut -d'"' -f2 | cut -dT -f1 | tr -d '-' ; echo -n r ; wget -qO - `echo $a | cut -d'"' -f1` | grep '<tr><td>changeset' | tr '<> ' '@' | cut -d@ -f6) | tr -d '\n'
+MOZCLIENT_GETDATE    = sh debian/moz-rev.sh http://hg.mozilla.org/mozilla-central default
 MOZCLIENT_EMBEDDED   = 1
 MOZCLIENT_WANTMOZDIR = 1
 MOZCLIENT_POSTCOCMD  = bzr branch lp:~mozillateam/firefox/awesome-browser-branding && mv awesome-browser-branding mozilla/browser/branding/awesome-browser
